--- a/dd/sass/article.scss
+++ b/dd/sass/article.scss
@@ -9,7 +9,7 @@ h1,h2,h3,h4,h5{font-weight:normal;}
     /*确定高度的最小值。防止页面缩放时底部出现空白*/
     width:100%;
   padding-top:70px;
-  // overflow:hidden;
+  /* overflow:hidden;*/
 }
 .header{
   /*for IE8-*/
@@ -17,7 +17,7 @@ h1,h2,h3,h4,h5{font-weight:normal;}
   height: $headerHeight;
   text-align: center;
   line-height: $headerHeight;
-  // 这行必须要加，否则会出现缩小窗口，左边留白bug
+  /* 这行必须要加，否则会出现缩小窗口，左边留白bug*/
   min-width: 1200px;
   position: fixed;
   top:0;
@@ -115,7 +115,7 @@ li.current-page:hover{
     display:block;
     @include opacity(1);
 }
-// todo:hover间隙问题
+/* todo:hover间隙问题*/
 .person-state-list-container{
     position:absolute;
     top: 50px;
@@ -147,7 +147,7 @@ li.current-page:hover{
     width:280px;
     position:relative;
 }
-// for IE8
+/* for IE8*/
 .search-input{
     width:236px;
     height:34px;
@@ -197,6 +197,7 @@ li.current-page:hover{
 .content-box img{
     display:inline-block;
 }
+
 .article-area{
     width:800px;
     font-size: 18px;
@@ -219,7 +220,7 @@ li.current-page:hover{
     font-family:$fontFamily;
 }
 .article-banner{
-    // background:#e9e9e9;
+    /* background:#e9e9e9;*/
     transition: background-color .3s ease-in-out;
     position:relative;
 }
@@ -264,13 +265,13 @@ li.current-page:hover{
     color:#666;
     font-size:0;
     display:inline-block;
-    // for IE8
+    /* for IE8*/
     background:#fff;
 }
 .author-area img{
     border-radius:50%;
 }
-.author-area span{
+.author-area span{ 
     margin-left:10px;
     font-size:16px;
     display:inline-block;
@@ -321,10 +322,10 @@ li.current-page:hover{
     float:right;
 }
 .zs-box li a{
-    // color:#c30;
+    /* color:#c30;*/
     color: #999;
     display:inline-block;
-    // for IE8
+    /* for IE8*/
     background:#fff;
     cursor: default;
 }
@@ -343,7 +344,7 @@ li.current-page:hover{
     background:url(../images/zc-w.png) center center no-repeat;
 }
 .buy-box{
-    // background:#e9e9e9;
+    /* background:#e9e9e9;*/
 }
 .buy-box h2{
     color:#666;
@@ -493,7 +494,7 @@ li.current-page:hover{
 }
 .erweima img{
     margin-left:40px;
-    margin-top: -33px; 
+    margin-top: -33px;
 }
 .hot{
     margin-top:20px;
@@ -536,9 +537,9 @@ li.current-page:hover{
 }
 .hot-list li:hover{
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1), 0 4px 8px 0 rgba(0,0,0,0.2);
-  // transform: scale(1.01);
+  /* transform: scale(1.01);*/
 }
-// 分享
+/* 分享*/
 .share-mask{
     background: #000;
     filter:alpha(opacity=50);
@@ -550,22 +551,22 @@ li.current-page:hover{
     left: 0;
     z-index: 9999999;
 }
-// 新分享开始
+/* 新分享开始*/
 .share-area{
   position: fixed;
   border-radius: 3px;
   width: 600px;
   background:rgba(255,255,255,0.8);
-  // hack for ie8
+  /* hack for ie8*/
   background:#fff\0;
-  // background: #fff;
+  /* background: #fff;*/
   z-index: 10000000;
   left: 50%;
   margin-left: -300px;
   height: 302px;
   top:100px;
   overflow: hidden;
-  // top:-450px;
+  /* top:-450px;*/
 }
 .share-title{
   font-size: 18px;
@@ -601,123 +602,123 @@ li.current-page:hover{
   width: 40px;
   transition:all 1s ease-in-out;
 }
-// .share-weixin:hover{
-//   transform: rotateX(180deg) translateY(47px);;
-// }
-// .share-area{
-//   position: absolute;
-//   border-radius: 3px;
-//   width: 800px;
-//   background: #fff;
-//   z-index: 10000000;
-//   left: 50%;
-//   top: 100px;
-//   margin-left: -400px;
-//   height: 450px;
-//   overflow: hidden;
-//   top:-450px;
-// }
-// .share-method-container{
-//  height: 59px;
-//  position: relative;
-//  width: 100%;
-//  border-bottom: 1px #ccc solid;
-// }
-// .share-wb,.share-wx{
-//  position: absolute;
-//  height: 57px;
-//  width: 200px;
-//  line-height: 57px;
-//  text-align: center;
-//  cursor: pointer;
-// }
-// .share-wb{
-//  left: 100px;
-// }
-// .share-wx{
-//  right: 100px;
-// }
-// .share-list{
-//  width: 1600px;
-//  position: absolute;
-// }
-// .share-list-wb{
-//  padding: 20px;
-//  height: 350px;
-//  width: 760px;
-// }
-// .share-list-wb textarea{
-//   width: 750px;
-//   height: 150px;
-//   resize:none;
-//   outline: none;
-//   border-color:#e3e3e3;
-//   padding-top: 10px;
-//   padding-left: 10px;
-// }
-// .share-wb-img-list{
-//  margin-top: 20px;
-// }
-// .share-wb-img-list li{
-//  margin-right: 20px;
-// }
-// .share-wb-btn-list{
-//  margin-top: 16px;
-// }
-// .share-wb-btn-list a{
-//  display: inline-block;
-//  width: 150px;
-//  height: 45px;
-//  border-radius: 50px;
-//  background: #ff6372;
-//  font-size: 16px;
-//  line-height: 45px;
-//  text-align: center;
-//  text-decoration: none;
-//  color:#fff;
-// }
-// .share-wb-btn-list a:hover{
-//  background:#e83848;
-// }
-// .share-wb-btn-list .cancle{
-//  margin-right: 20px;
-// }
-// .cancle a{
-//  background:transparent;
-//  color:#c3c3c3;
-//  border:1px #c3c3c3 solid;
-// }
-// .share-wb-btn-list .cancle a:hover{
-//  background:transparent;
-//  color:#ccc;
-//  border:1px #ccc solid;
-// }
-// .share-close {
-//     position: absolute;
-//     height: 24px;
-//     width: 24px;
-//     background: url(../images/close.png) center center no-repeat;
-//     top: 17px;
-//     right: 30px;
-//     transition: .3s;
+/* .share-weixin:hover{*/
+/*   transform: rotateX(180deg) translateY(47px);;*/
+/* }*/
+/* .share-area{*/
+/*   position: absolute;*/
+/*   border-radius: 3px;*/
+/*   width: 800px;*/
+/*   background: #fff;*/
+/*   z-index: 10000000;*/
+/*   left: 50%;*/
+/*   top: 100px;*/
+/*   margin-left: -400px;*/
+/*   height: 450px;*/
+/*   overflow: hidden;*/
+/*   top:-450px;*/
+/* }*/
+/* .share-method-container{*/
+/*  height: 59px;*/
+/*  position: relative;*/
+/*  width: 100%;*/
+/*  border-bottom: 1px #ccc solid;*/
+/* }*/
+/* .share-wb,.share-wx{*/
+/*  position: absolute;*/
+/*  height: 57px;*/
+/*  width: 200px;*/
+/*  line-height: 57px;*/
+/*  text-align: center;*/
+/*  cursor: pointer;*/
+/* }*/
+/* .share-wb{*/
+/*  left: 100px;*/
+/* }*/
+/* .share-wx{*/
+/*  right: 100px;*/
+/* }*/
+/* .share-list{*/
+/*  width: 1600px;*/
+/*  position: absolute;*/
+/* }*/
+/* .share-list-wb{*/
+/*  padding: 20px;*/
+/*  height: 350px;*/
+/*  width: 760px;*/
+/* }*/
+/* .share-list-wb textarea{*/
+/*   width: 750px;*/
+/*   height: 150px;*/
+/*   resize:none;*/
+/*   outline: none;*/
+/*   border-color:#e3e3e3;*/
+/*   padding-top: 10px;*/
+/*   padding-left: 10px;*/
+/* }*/
+/* .share-wb-img-list{*/
+/*  margin-top: 20px;*/
+/* }*/
+/* .share-wb-img-list li{*/
+/*  margin-right: 20px;*/
+/* }*/
+/* .share-wb-btn-list{*/
+/*  margin-top: 16px;*/
+/* }*/
+/* .share-wb-btn-list a{*/
+/*  display: inline-block;*/
+/*  width: 150px;*/
+/*  height: 45px;*/
+/*  border-radius: 50px;*/
+/*  background: #ff6372;*/
+/*  font-size: 16px;*/
+/*  line-height: 45px;*/
+/*  text-align: center;*/
+/*  text-decoration: none;*/
+/*  color:#fff;*/
+/* }*/
+/* .share-wb-btn-list a:hover{*/
+/*  background:#e83848;*/
+/* }*/
+/* .share-wb-btn-list .cancle{*/
+/*  margin-right: 20px;*/
+/* }*/
+/* .cancle a{*/
+/*  background:transparent;*/
+/*  color:#c3c3c3;*/
+/*  border:1px #c3c3c3 solid;*/
+/* }*/
+/* .share-wb-btn-list .cancle a:hover{*/
+/*  background:transparent;*/
+/*  color:#ccc;*/
+/*  border:1px #ccc solid;*/
+/* }*/
+/* .share-close {*/
+/*     position: absolute;*/
+/*     height: 24px;*/
+/*     width: 24px;*/
+/*     background: url(../images/close.png) center center no-repeat;*/
+/*     top: 17px;*/
+/*     right: 30px;*/
+/*     transition: .3s;*/
 
-// }
-// .share-close:hover{
-//  transform:rotate(180deg);
-// }
-// .share-list-wx{
-//  margin-top: 40px;
-//  text-align: center;
-//  width: 800px;
-// }
-// .share-list-wx p{
-//  margin-top: 30px;
-//  font-size: 16px;
-//  color:#333;
-// }
-// .active{
-//  border-bottom: 3px $commonColor solid;
-// }
+/* }*/
+/* .share-close:hover{*/
+/*  transform:rotate(180deg);*/
+/* }*/
+/* .share-list-wx{*/
+/*  margin-top: 40px;*/
+/*  text-align: center;*/
+/*  width: 800px;*/
+/* }*/
+/* .share-list-wx p{*/
+/*  margin-top: 30px;*/
+/*  font-size: 16px;*/
+/*  color:#333;*/
+/* }*/
+/* .active{*/
+/*  border-bottom: 3px $commonColor solid;*/
+/* }*/
 .article h2,.article h3{
     padding-left:40px;
     color:#333;
@@ -731,10 +732,10 @@ li.current-page:hover{
 .article h3{
   border-left-width:4px;
 }
-// .small{ 
-//     border-left:4px $commonColor solid;
-// } 
-// sass BUG
+/* .small{*/
+/*     border-left:4px $commonColor solid;*/
+/* } */
+/* sass BUG*/
 .article ul{
   margin-top:30px;
 }
@@ -752,37 +753,37 @@ li.current-page:hover{
   left: 40px;
   top: 11px;
 }
-// .pointer{
-//   position:absolute;
-//   height: 6px;
-//   width: 6px;
-//   border-radius:50%;
-//   background:$commonColor;
-//   left: 40px;
-//   top: 11px;
-// }
-// .keystone{
-//  padding:30px 20px 30px 20px;
-//  background:#f4f4f4;
-//  margin:30px 40px 0 40px;
-//  position:relative;
-// }
-// .keystone h2{
-//     line-height: 1;
-//     color:#333;
-// }
-// .keystone p{
-//     margin-top: 25px;
-// }
-// .cutoff{
-//  position:absolute;
-//     // 这样实现梯形更优雅，兼容性更好，代码更少
-//     border:24px solid transparent;
-//     border-top-color: #fff;
-//     border-right-color: #fff;
-//     right: 0;
-//     top: 0;
-// }
+/* .pointer{*/
+/*   position:absolute;*/
+/*   height: 6px;*/
+/*   width: 6px;*/
+/*   border-radius:50%;*/
+/*   background:$commonColor;*/
+/*   left: 40px;*/
+/*   top: 11px;*/
+/* }*/
+/* .keystone{*/
+/*  padding:30px 20px 30px 20px;*/
+/*  background:#f4f4f4;*/
+/*  margin:30px 40px 0 40px;*/
+/*  position:relative;*/
+/* }*/
+/* .keystone h2{*/
+/*     line-height: 1;*/
+/*     color:#333;*/
+/* }*/
+/* .keystone p{*/
+/*     margin-top: 25px;*/
+/* }*/
+/* .cutoff{*/
+/*  position:absolute;*/
+/*     // 这样实现梯形更优雅，兼容性更好，代码更少*/
+/*     border:24px solid transparent;*/
+/*     border-top-color: #fff;*/
+/*     border-right-color: #fff;*/
+/*     right: 0;*/
+/*     top: 0;*/
+/* }*/
 .quotebox{
     background: #f4f4f4;
     margin:30px 40px 0 40px;
@@ -802,11 +803,11 @@ li.current-page:hover{
     top: 0;
     right: 0;
 }
-// .left-line{
-//     margin-left:40px;
-//     padding-left:8px;
-//     border-left:3px red solid;
-// }
+/* .left-line{*/
+/*     margin-left:40px;*/
+/*     padding-left:8px;*/
+/*     border-left:3px red solid;*/
+/* }*/
 .article .lift{
     margin-left: 40px;
     padding:0 0 0 10px;
@@ -852,24 +853,21 @@ li.current-page:hover{
     top: 60px;
     left: 6px;
     border-bottom: 1px #909090 solid;
-    // display: none;
+    /* display: none;*/
 }
 .bottom-share{
   height: 61px;
-  width: 61px;   
+  width: 61px;
   border-radius: 8px;
   background: url(../images/bottombar.png) 0 0;
   transition:background-position .28s;
-  // display: none;
+  /* display: none;*/
 }
 .bottom-share:hover{
-  background-position: 0 -71px;  
+  background-position: 0 -71px;
 }
 .tt-ii-pp-s{
   -webkit-animation:ttiippss .3s linear infinite;
-  -moz-animation:ttiippss .3s linear infinite;
-  -ms-animation:ttiippss .3s linear infinite;
-  -o-animation:ttiippss .3s linear infinite;
   animation:ttiippss .3s linear infinite;
 }
 @-webkit-keyframes ttiippss{
@@ -890,72 +888,22 @@ li.current-page:hover{
       transform:rotate(0);
     }
   }
-  @-ms-keyframes ttiippss{
-    0%{
-      -ms-transform:rotate(-2deg);
-      transform:rotate(-2deg);
-    }
-    25%{
-      -ms-transform:rotate(0);
-      transform:rotate(0);
-    }
-    50%{
-      -ms-transform:rotate(2deg);
-      transform:rotate(2deg);
-    }
-    100%{
-      -ms-transform:rotate(0);
-      transform:rotate(0);
-    }
-  }
-  @-moz-keyframes ttiippss{
-    0%{
-      -moz-transform:rotate(-2deg);
-      transform:rotate(-2deg);
-    }
-    25%{
-      -moz-transform:rotate(0);
-      transform:rotate(0);
-    }
-    50%{
-      -moz-transform:rotate(2deg);
-      transform:rotate(2deg);
-    }
-    100%{
-      -moz-transform:rotate(0);
-      transform:rotate(0);
-    }
-  }
-  @-o-keyframes ttiippss{
-    0%{
-      -o-transform:rotate(-2deg);
-      transform:rotate(-2deg);
-    }
-    25%{
-      -o-transform:rotate(0);
-      transform:rotate(0);
-    }
-    50%{
-      -o-transform:rotate(2deg);
-      transform:rotate(2deg);
-    }
-    100%{
-      -o-transform:rotate(0);
-      transform:rotate(0);
-    }
-  }
   @keyframes ttiippss{
     0%{
-      transform:rotate(-2deg);
+      -webkit-transform:rotate(-2deg);
+              transform:rotate(-2deg);
     }
     25%{
-      transform:rotate(0);
+      -webkit-transform:rotate(0);
+              transform:rotate(0);
     }
     50%{
-      transform:rotate(2deg);
+      -webkit-transform:rotate(2deg);
+              transform:rotate(2deg);
     }
     100%{
-      transform:rotate(0);
+      -webkit-transform:rotate(0);
+              transform:rotate(0);
     }
   }
 #qrcode{
